# NLPDL-2025Fall_Project

./: .gitignore  expert_data_generation.py  generate_prompt_variants.py  prompt_generator.py  pyproject.toml  qwen_experiment.py  qwen_experiment_enhanced.py  run_qwen.sh  style_data_generation.py  web_app.py
data/: prompt_variants.json
data/example/: dataset_capability_english_final.json  dataset_style_pairs_final.json
data/expert_data/: expert_data.json
data/style_data/: style_data.json
templates/: index.html
