[project]
name = "nlpdl-2025fall-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
